--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
@@ -25,7 +25,32 @@
   </head>
 
   <body>
-    <h1 class="bg-warning">Hello World!</h1>
+    <header class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h1>
+              Yoga is the
+              <div class="h1-content">journey</div>
+              of the self.
+            </h1>
+            <h2>Embark on Your Soul's Journey!</h2>
+          </div>
+          <div class="col-sm-6 center">
+            <img
+              class="img-fluid col-sm-2 header-img-left"
+              src="/images/headerImgLeft.webp"
+              alt="Image of a serene woman practicing yoga amidst nature's beauty"
+            />
+            <img
+              class="img-fluid col-sm-4 header-img-right"
+              src="/images/headerImgRight.webp"
+              alt="Yoga practitioner meditating, surrounded by nature's embrace"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
 
     <script src="/src/app.js"></script>
   </body>
