--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </h1>
             <h2>Embark on Your Soul's Journey!</h2>
           </div>
-          <div class="col-sm-6 center">
+          <div class="col-sm-6 mt-3">
             <img
               class="img-fluid col-sm-2 header-img-left"
               src="/images/headerImgLeft.webp"
