Integrated homepage content design.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
@@ -34,7 +34,7 @@
               <div class="h1-content">journey</div>
               of the self.
             </h1>
-            <h2>Embark on Your Soul's Journey!</h2>
+            <h3>Embark on Your Soul's Journey!</h3>
           </div>
           <div class="col-sm-6 mt-3">
             <img
@@ -51,6 +51,166 @@
         </div>
       </div>
     </header>
+    <div class="body-center mt-3">
+      <div class="row">
+        <div class="col-lg-6 flex">
+          <h2>We'll help you relax your<br />way into a new you!</h2>
+          <p>
+            We're dedicated to helping you relax your way into a new you. Our
+            studio offers a sanctuary for rejuvenation through the ancient
+            practice of yoga. Join us on this transformative journey toward
+            inner peace and holistic wellness.
+          </p>
+          <a href="/about.html" class="about-button">More about us</a>
+        </div>
+        <div class="d-none d-lg-block col-lg-6">
+          <img
+            src="/images/womanInPark.webp"
+            class="img-fluid rounded-3 mt-3"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="body-center">
+      <div class="bg-green rounded-2">
+        <h4 class="pt-4 pb-3">Our Classes</h4>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="class-pic-container">
+                <img
+                  src="/images/vinyasaFlowYoga.webp"
+                  class="img-fluid rounded-3"
+                />
+                <h5>Vinyasa Flow Yoga</h5>
+                <p>
+                  Discover the invigorating rhythm of Vinyasa Flow Yoga, syncing
+                  breath and movement for fluid sequences. Whether you're a
+                  seasoned yogi or new, find strength, flexibility, and
+                  mindfulness in our empowering classes.
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="class-pic-container">
+                <img
+                  src="/images/RestorativeYoga.webp"
+                  class="img-fluid rounded-3"
+                />
+                <h5>Restorative Yoga</h5>
+                <p>
+                  Immerse in pure relaxation with Restorative Yoga, melting away
+                  stress with supported poses and gentle stretches. Surrender
+                  into deep tranquility as props create a nurturing space for
+                  rejuvenation.
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="class-pic-container">
+                <img
+                  src="/images/yogaForBeginners.webp"
+                  class="img-fluid rounded-3"
+                />
+                <h5>Yoga for Beginners</h5>
+                <p>
+                  Embark on your yoga journey confidently in our supportive
+                  Beginner's Yoga classes, guided by experienced instructors to
+                  unlock transformative benefits.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="body-center">
+      <div class="contact-container">
+        <h4>To reserve a class, get in touch with us:</h4>
+        <a href="/contact.html" class="contact-button">Contact Us</a>
+      </div>
+    </div>
+
+    <footer class="body-center pt-5">
+      <div class="footer-part-container">
+        <div>
+          <ul>
+            <li class="bold">Yoga Classes</li>
+            <li>
+              <a href="#" class="footer-links" target="_blank">Vinyasa Flow</a>
+            </li>
+            <li>
+              <a href="#" class="footer-links" target="_blank">Restorative</a>
+            </li>
+            <li>
+              <a href="#" class="footer-links" target="_blank"
+                >Beginners Level</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li class="bold">Articles</li>
+            <li>
+              <a
+                href="#https://yogainternational.com/articles/?topic=Practice"
+                class="footer-links"
+                target="_blank"
+                >Practice</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://yogainternational.com/articles/?topic=Yoga+Therapy"
+                class="footer-links"
+                target="_blank"
+                >Yoga Therapy</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://yogainternational.com/articles/?topic=Ayurveda"
+                class="footer-links"
+                target="_blank"
+                >Ayurveda</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://yogainternational.com/poses/"
+                class="footer-links"
+                target="_blank"
+                >Poses</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li class="bold">
+              <a href="/about.html" class="footer-links" target="_blank"
+                >About</a
+              >
+            </li>
+            <li class="bold">
+              <a href="/contact.html" class="footer-links" target="_blank"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-text">
+        <div>
+          All Content Copyright SoulStretch Studio 2024. All Rights Reserved.
+        </div>
+        <div>This website was designed and coded by Zahra Ghaznavi.</div>
+      </div>
+    </footer>
 
     <script src="/src/app.js"></script>
   </body>
