Integrated about page content design.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="footer-part-container">
         <div>
           <ul>
-            <li class="bold">Yoga Classes</li>
+            <li class="fw-semibold">Yoga Classes</li>
             <li>
               <a href="#" class="footer-links" target="_blank">Vinyasa Flow</a>
             </li>
@@ -153,7 +153,7 @@
         </div>
         <div>
           <ul>
-            <li class="bold">Articles</li>
+            <li class="fw-semibold">Articles</li>
             <li>
               <a
                 href="#https://yogainternational.com/articles/?topic=Practice"
@@ -190,12 +190,12 @@
         </div>
         <div>
           <ul>
-            <li class="bold">
+            <li class="fw-semibold">
               <a href="/about.html" class="footer-links" target="_blank"
                 >About</a
               >
             </li>
-            <li class="bold">
+            <li class="fw-semibold">
               <a href="/contact.html" class="footer-links" target="_blank"
                 >Contact</a
               >
