Integrated contact page content design.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
               practice of yoga. Join us on this transformative journey toward
               inner peace and holistic wellness.
             </p>
-            <a href="/contact.html" class="contact-button mt-0">Contact Us</a>
+            <a href="/contact.html" class="contact-button mt-0 fw-semibold"
+              >Contact Us</a
+            >
           </div>
           <div class="d-none d-lg-block col-lg-6">
             <img
