--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
     <div class="body-center">
       <div class="contact-container">
         <h4>To reserve a class, get in touch with us:</h4>
-        <a href="/contact.html" class="contact-button">Contact Us</a>
+        <a href="/contact.html" class="contact-button fw-semibold"
+          >Contact Us</a
+        >
       </div>
     </div>
 
