--- a/contact.html
+++ b/contact.html
@@ -30,19 +30,19 @@
     </div>
     <form class="pt-5 body-center" onsubmit="handleSubmit(event)">
       <div>
-        <label for="firstName">What is your first name?</label>
+        <label for="firstName">What is your first name?*</label>
         <input type="text" id="firstName" class="p-1 mt-2" required />
       </div>
       <div class="input-container">
-        <label for="lastName">What is your last name?</label>
+        <label for="lastName">What is your last name?*</label>
         <input type="text" id="lastName" class="p-1 mt-2" required />
       </div>
       <div class="input-container">
-        <label for="email">What is your email address?</label>
+        <label for="email">What is your email address?*</label>
         <input type="email" id="email" class="p-1 mt-2" required />
       </div>
       <div class="input-container">
-        <label for="Classes">Which class do you want to participate in?</label>
+        <label for="Classes">Which class do you want to participate in?*</label>
         <select id="classes" class="p-1 mt-2" required>
           <option value="" selected>Select One ...</option>
           <option value="Vinyasa Flow Yoga">Vinyasa Flow Yoga</option>
@@ -51,7 +51,7 @@
         </select>
       </div>
       <div class="input-container">
-        <label for="question">Any questions...?</label>
+        <label for="question">Feel free to ask any questions.</label>
         <textarea rows="4" class="mt-2"></textarea>
       </div>
       <button type="submit" class="submit-button">Submit</button>
