--- a/about.html
+++ b/about.html
@@ -25,6 +25,14 @@
   </head>
 
   <body>
+    <nav class="d-flex justify-content-between">
+      <h6>SoulStretch Studio</h6>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="about.html">About</a></li>
+        <li><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
     <div class="body-center about-header pb-5">
       <div class="container mb-2">
         <div class="row">
@@ -38,7 +46,9 @@
               practice of yoga. Join us on this transformative journey toward
               inner peace and holistic wellness.
             </p>
-            <a href="/contact.html" class="contact-button mt-0 fw-semibold"
+            <a
+              href="/contact.html"
+              class="contact-button green-text mt-0 fw-semibold"
               >Contact Us</a
             >
           </div>
@@ -241,5 +251,7 @@
         <div>This website was designed and coded by Zahra Ghaznavi.</div>
       </div>
     </footer>
+
+    <script src="/src/app.js"></script>
   </body>
 </html>
