--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,16 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="/src/app.js"></script>
   </head>
   <body>
+    <nav class="d-flex justify-content-between">
+      <h6>SoulStretch Studio</h6>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li class="active"><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
     <div class="body-center contact-header">
       <h1 class="pb-2">Get in Touch</h1>
     </div>
@@ -135,5 +142,7 @@
         <div>This website was designed and coded by Zahra Ghaznavi.</div>
       </div>
     </footer>
+
+    <script src="/src/app.js"></script>
   </body>
 </html>
