--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
   </head>
 
   <body>
+    <nav class="d-flex justify-content-between">
+      <h6>SoulStretch Studio</h6>
+      <ul>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
     <header>
       <div class="container">
         <div class="row">
@@ -213,5 +221,7 @@
         <div>This website was designed and coded by Zahra Ghaznavi.</div>
       </div>
     </footer>
+
+    <script src="/src/app.js"></script>
   </body>
 </html>
