--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SoulStretch Studio: Online Yoga Classes for All Levels</title>
+    <title>About SoulStretch Studio</title>
+    <meta
+      name="description"
+      content="Elevate your wellness journey with insights into SoulStretch Studio. Explore our instructors, and diverse offerings, empowering you to discover harmony and vitality through yoga. Join our vibrant community today."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,9 +32,13 @@
     <nav class="d-flex justify-content-between">
       <h6>SoulStretch Studio</h6>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="about.html">About</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a href="/" title="SoulStretch Studio Homepage">Home</a></li>
+        <li class="active">
+          <a href="about.html" title="About SoulStretch Studio">About</a>
+        </li>
+        <li>
+          <a href="contact.html" title="Contact SoulStretch Studio">contact</a>
+        </li>
       </ul>
     </nav>
     <div class="body-center about-header pb-5">
@@ -48,7 +56,8 @@
             </p>
             <a
               href="/contact.html"
-              class="contact-button green-text mt-0 fw-semibold"
+              class="contact-button mt-0 fw-semibold"
+              title="Contact SoulStretch Studio"
               >Contact Us</a
             >
           </div>
@@ -56,6 +65,7 @@
             <img
               src="/images/confidenceGirlPracticingYoga.webp"
               class="img-fluid rounded-3 mt-3"
+              alt="Woman confidently practicing yoga wearing AirPods"
             />
           </div>
         </div>
@@ -70,6 +80,7 @@
             <img
               src="/images/evelynJohnson.webp"
               class="img-fluid rounded-circle teachers-img"
+              alt="Evelyn Johnson, the serene yoga teacher, adorned with a delicate white flower, symbolizing tranquility and wisdom."
             />
             <h5>Evelyn Johnson</h5>
             <p>
@@ -81,6 +92,7 @@
             <img
               src="/images/auroraPatel.webp"
               class="img-fluid rounded-circle teachers-img"
+              alt="Aurora Patel, the radiant yoga instructor, guiding students with grace and expertise."
             />
             <h5>Aurora Patel</h5>
             <p>
@@ -92,6 +104,7 @@
             <img
               src="/images/sophiaRamirez.webp"
               class="img-fluid rounded-circle teachers-img"
+              alt="Sophia Ramirez, the inspiring yoga teacher, leading with compassion and expertise."
             />
             <h5>Sophia Ramirez</h5>
             <p>
@@ -109,7 +122,11 @@
         <div class="container pt-2">
           <div class="row">
             <div class="d-none d-lg-block col-lg-1 ps-3 pt-2">
-              <img src="/images/avaKim.webp" class="img-fluid rounded-circle" />
+              <img
+                src="/images/avaKim.webp"
+                class="img-fluid rounded-circle"
+                alt="Ava Kim Profile"
+              />
             </div>
             <div class="col-lg-11">
               <div class="fw-semibold student-name">Ava Kim:</div>
@@ -130,6 +147,7 @@
               <img
                 src="/images/liamJohnson.webp"
                 class="img-fluid rounded-circle"
+                alt="Liam Johnson Profile"
               />
             </div>
             <div class="col-lg-11">
@@ -153,6 +171,7 @@
               <img
                 src="/images/emmaRodriguez.webp"
                 class="img-fluid rounded-circle"
+                alt="Emma Rodriguez Profile"
               />
             </div>
             <div class="col-lg-11">
@@ -179,13 +198,29 @@
           <ul>
             <li class="fw-semibold">Yoga Classes</li>
             <li>
-              <a href="#" class="footer-links" target="_blank">Vinyasa Flow</a>
+              <a
+                href="/index.html#vinyasaFlowYoga"
+                class="footer-links"
+                target="_blank"
+                title="Vinyasa Flow Yoga Classes"
+                >Vinyasa Flow</a
+              >
             </li>
             <li>
-              <a href="#" class="footer-links" target="_blank">Restorative</a>
+              <a
+                href="/index.html#restorativeYoga"
+                class="footer-links"
+                target="_blank"
+                title="Restorative Yoga classes"
+                >Restorative</a
+              >
             </li>
             <li>
-              <a href="#" class="footer-links" target="_blank"
+              <a
+                href="/index.html#yogFoBeginners"
+                class="footer-links"
+                target="_blank"
+                title="Beginners Level Yoga Classes"
                 >Beginners Level</a
               >
             </li>
@@ -199,6 +234,7 @@
                 href="#https://yogainternational.com/articles/?topic=Practice"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Practice"
                 >Practice</a
               >
             </li>
@@ -207,6 +243,7 @@
                 href="https://yogainternational.com/articles/?topic=Yoga+Therapy"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Yoga Therapy"
                 >Yoga Therapy</a
               >
             </li>
@@ -215,6 +252,7 @@
                 href="https://yogainternational.com/articles/?topic=Ayurveda"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Ayurveda"
                 >Ayurveda</a
               >
             </li>
@@ -223,6 +261,7 @@
                 href="https://yogainternational.com/poses/"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Poses"
                 >Poses</a
               >
             </li>
@@ -231,12 +270,20 @@
         <div>
           <ul>
             <li class="fw-semibold">
-              <a href="/about.html" class="footer-links" target="_blank"
+              <a
+                href="/about.html"
+                class="footer-links"
+                target="_blank"
+                title="About SoulStretch Studio"
                 >About</a
               >
             </li>
             <li class="fw-semibold">
-              <a href="/contact.html" class="footer-links" target="_blank"
+              <a
+                href="/contact.html"
+                class="footer-links"
+                target="_blank"
+                title="Contact SoulStretch Studio"
                 >Contact</a
               >
             </li>
