--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SoulStretch Studio: Online Yoga Classes for All Levels</title>
+    <title>Contact SoulStretch Studio</title>
+    <meta
+      name="description"
+      content="Connect with SoulStretch Studio effortlessly through our contact page. Reach out to our dedicated team for inquiries, bookings, or any assistance you need. Let's embark on your wellness journey together."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,9 +31,11 @@
     <nav class="d-flex justify-content-between">
       <h6>SoulStretch Studio</h6>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li class="active"><a href="contact.html">contact</a></li>
+        <li><a href="/" title="SoulStretch Studio Homepage">Home</a></li>
+        <li><a href="about.html" title="About SoulStretch Studio">About</a></li>
+        <li class="active">
+          <a href="contact.html" title="Contact SoulStretch Studio">contact</a>
+        </li>
       </ul>
     </nav>
     <div class="body-center contact-header">
@@ -70,13 +76,29 @@
           <ul>
             <li class="fw-semibold">Yoga Classes</li>
             <li>
-              <a href="#" class="footer-links" target="_blank">Vinyasa Flow</a>
+              <a
+                href="/index.html#vinyasaFlowYoga"
+                class="footer-links"
+                target="_blank"
+                title="Vinyasa Flow Yoga Classes"
+                >Vinyasa Flow</a
+              >
             </li>
             <li>
-              <a href="#" class="footer-links" target="_blank">Restorative</a>
+              <a
+                href="/index.html#restorativeYoga"
+                class="footer-links"
+                target="_blank"
+                title="Restorative Yoga classes"
+                >Restorative</a
+              >
             </li>
             <li>
-              <a href="#" class="footer-links" target="_blank"
+              <a
+                href="/index.html#yogFoBeginners"
+                class="footer-links"
+                target="_blank"
+                title="Beginners Level Yoga Classes"
                 >Beginners Level</a
               >
             </li>
@@ -90,6 +112,7 @@
                 href="#https://yogainternational.com/articles/?topic=Practice"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Practice"
                 >Practice</a
               >
             </li>
@@ -98,6 +121,7 @@
                 href="https://yogainternational.com/articles/?topic=Yoga+Therapy"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Yoga Therapy"
                 >Yoga Therapy</a
               >
             </li>
@@ -106,6 +130,7 @@
                 href="https://yogainternational.com/articles/?topic=Ayurveda"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Ayurveda"
                 >Ayurveda</a
               >
             </li>
@@ -114,6 +139,7 @@
                 href="https://yogainternational.com/poses/"
                 class="footer-links"
                 target="_blank"
+                title="Articles about Poses"
                 >Poses</a
               >
             </li>
@@ -122,12 +148,20 @@
         <div>
           <ul>
             <li class="fw-semibold">
-              <a href="/about.html" class="footer-links" target="_blank"
+              <a
+                href="/about.html"
+                class="footer-links"
+                target="_blank"
+                title="About SoulStretch Studio"
                 >About</a
               >
             </li>
             <li class="fw-semibold">
-              <a href="/contact.html" class="footer-links" target="_blank"
+              <a
+                href="/contact.html"
+                class="footer-links"
+                target="_blank"
+                title="Contact SoulStretch Studio"
                 >Contact</a
               >
             </li>
