--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/webp" href="/images/favicon.webp" />
     <title>SoulStretch Studio: Online Yoga Classes for All Levels</title>
     <meta
       name="description"
@@ -42,7 +43,7 @@
       </ul>
     </nav>
     <header>
-      <div class="container">
+      <div class="container pt-4">
         <div class="row">
           <div class="col-sm-6">
             <h1>
