Added favicon to all pages.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/webp" href="/images/favicon.webp" />
+    <link rel="icon" type="image/png" href="/images/favicon32*32.png" />
     <title>SoulStretch Studio: Online Yoga Classes for All Levels</title>
     <meta
       name="description"
@@ -43,7 +43,7 @@
       </ul>
     </nav>
     <header>
-      <div class="container pt-4">
+      <div class="container pt-4 pb-1">
         <div class="row">
           <div class="col-sm-6">
             <h1>
