Updated navbar links.

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,9 @@
   </head>
   <body>
     <nav class="d-flex justify-content-between">
-      <h6>SoulStretch Studio</h6>
+      <h6>
+        <a href="/" title="SoulStretch Studio Homepage">SoulStretch Studio</a>
+      </h6>
       <ul>
         <li><a href="/" title="SoulStretch Studio Homepage">Home</a></li>
         <li><a href="about.html" title="About SoulStretch Studio">About</a></li>
