--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
   <body>
     <nav class="d-flex justify-content-between">
-      <h6>SoulStretch Studio</h6>
+      <h6>
+        <a href="/" title="SoulStretch Studio Homepage">SoulStretch Studio</a>
+      </h6>
       <ul>
         <li class="active">
           <a href="/" title="SoulStretch Studio Homepage">Home</a>
