Updated author name

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div>
           All Content Copyright SoulStretch Studio 2024. All Rights Reserved.
         </div>
-        <div>This website was designed and coded by Zahra Ghaznavi.</div>
+        <div>This website was designed and coded by Lili Ghaznavi.</div>
       </div>
     </footer>
 
